# multisport-py

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml  publish.yml
examples/: simple_usage.py
src/multisport_py/: __init__.py  client.py  exceptions.py
tests/: test_client.py
