[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "multisport-py"
dynamic = ["version"]
description = "Python client library for interacting with the MultiSport platform."
readme = "README.md"
authors = [
    { name = "TheUndefined", email = "undefine@aramin.net" },
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
]

[project.urls]
"Homepage" = "https://github.com/TheUndefined/multisport-py"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "python-dotenv",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov"
]

[tool.black]
line-length = 120

[tool.ruff]
lint.select = ["E", "F", "I", "W", "C90", "N", "D"]
lint.ignore = ["D100", "D104", "D105", "D107", "D203", "D212", "D415"]
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = "src"

[tool.hatch.version]
source = "vcs"
